# Hate-Moderation-System

./: .pre-commit-config.yaml  README.md  check_n_suggest.py  local.env  pyproject.toml  run_analysis.py
notebooks/: main.ipynb
src/: main.py
src/dspy/: __init__.py  analyse.py  models.py  recommend.py
src/pipeline/: __init__.py  analyse.py  models.py  recommend.py
src/workflow/: __init__.py  analysis.py  deep_analysis.py  models.py  warn.py
src/workflow/testing/: dataGeneration.py  test.py
src/workflow/testing/data/: Test_output.tsv  test_dataset_100_100.tsv  test_dataset_100_100.tsv_with_context.tsv
